# Motor

./: LICENSE
motor_client/iOS/Motor/Motor.xcodeproj/: project.pbxproj
motor_client/iOS/Motor/Motor.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
motor_client/iOS/Motor/Motor.xcodeproj/xcshareddata/xcschemes/: Motor.xcscheme  TempHumApp.xcscheme
motor_client/iOS/Motor/MotorApp/: ContentView.swift  Motor.swift  MotorApp.swift
motor_client/iOS/Motor/MotorTests/: MotorTests.swift
motor_client/iOS/Motor/MotorUITests/: MotorUITests.swift
motor_server/: CMakeLists.txt  motor_server.c
test_motor/: test_motor.py
